SERVER-47832 ReplicationCoordinatorImpl::_makeIsMasterResponse() should check for quiesce mode